--- a/TravelTourGuide/Base.lproj/LaunchScreen.storyboard
+++ b/TravelTourGuide/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="trip-logo" translatesAutoresizingMaskIntoConstraints="NO" id="yhj-Rp-8XB">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yhj-Rp-8XB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="1mY-hz-DZQ"/>
+                            <constraint firstItem="yhj-Rp-8XB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4Pt-vd-E3v"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="yhj-Rp-8XB" secondAttribute="bottom" id="m4E-KD-S87"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yhj-Rp-8XB" secondAttribute="trailing" id="q3d-zV-VTV"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="trip-logo" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
